# RonaldMcDonaldFunHouse

./: CodeToHTML.sh  README.md  pynq-config.sh  pynq-filesystem.sh  ssh-pynq.sh
Homework1/: Homework1.txt  a.out  problem1.c  problem2.c  problem3.c  problem4.c
Lab1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world  hello_world.c
Lab2/buttons/: buttons.c  buttons.h
Lab2/intc/: CMakeLists.txt  intc.c  intc.h
Lab2/main/: CMakeLists.txt  main.c  main_button_test.c
Lab2/switches/: switches.c  switches.h
Lab3/: .~lock.Design Doc.docx#  Design Doc.docx
Lab3/draw/: alien.c  alien.h  bunker.c  bunker.h  draw.c  draw.h  draw_alien.c  draw_alien.h  draw_game_over.c  draw_game_over.h  draw_generic.c  draw_generic.h  draw_player.c  draw_player.h  draw_ui.c  draw_ui.h  game_over.c  game_over.h  generic.c  generic.h  player.c  player.h  ui.c  ui.h
Lab3/globals/: extern.txt  globals.c  globals.h
Lab3/hdmi/: hdmi.c  hdmi.h
Lab3/init/: init.c  init.h
Lab3/main/: CMakeLists.txt  main.c  main_test.c
Lab3/scores/: high_scores.txt  scores.c  scores.h
Lab3/sprites/: alien_army.c  alien_army.h  sprites.c
Lab4/audio/: Makefile  audio.c  audio.h  audio_interrupts.c  audio_interrupts.h  user_audio.c  user_audio.h
Lab4/config/: config.c  config.h
Lab4/main/: CMakeLists.txt  main.c
Lab4/wav/: wav.c  wav.h
Lab4toSubmit/Lab3/: Design Doc.docx
Lab4toSubmit/Lab3/main/: CMakeLists.txt  main.c
Lab6/: Makefile  pit.c  pitc.c  pitc.h
LinuxDeviceTree/: README  makefile
vivado/: .gitignore  ecen427.bit  ecen427.tcl  makefile
(+195 files in other folders)
